objects/SGR_Area_Rate_Result__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Fees__c</fullName>
        <label>ACA Fees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Number__c</fullName>
        <label>Area Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Census_Detail_ID__c</fullName>
        <label>Census Detail ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Premium__c</fullName>
        <label>Gross Premium</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Tefra__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tefra</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tobacco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tobacco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Of_ACA__c</fullName>
        <label>Net Of ACA</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_ACA_Fees__c</fullName>
        <label>Non ACA Fees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Rate_Result__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plan Rate Result</label>
        <referenceTo>SGR_Plan_Rate_Result__c</referenceTo>
        <relationshipLabel>Area Rate Results</relationshipLabel>
        <relationshipName>Area_Rate_Results</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber_Id__c</fullName>
        <label>Subscriber Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Area Rate Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Area Rate Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Area Rate Results</pluralLabel>
    <recordTypes>
        <fullName>Area_Rate_Result</fullName>
        <active>true</active>
        <label>Area Rate Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>